--- a/src/win32/CMakeLists.txt
+++ b/src/win32/CMakeLists.txt
@@ -24,6 +24,7 @@ set(PLATFORM_SOURCES
   ${CORE_ROOT}/x_win32.c
   ${CORE_ROOT}/x_file_settings.c
   ${SRC_ROOT}/win32/main.c
+  ${SRC_ROOT}/win32/main.rc
 )
   
 SET(CMAKE_FIND_LIBRARY_PREFIXES "")
