--- a/install/linux/control
+++ b/install/linux/control
@@ -11,7 +11,16 @@ Homepage: http://www.time-flask.com/
 Package: cellmotus
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: Cell Motus puzzle game.
- Cell Motus puzzle is a dark themed variation on Andrey Shevchuk Game about Squares in which you have to find the right way to connect cells with circles of the same color. Cells move only in one of the six directions in which the arrow is pointing. Arrows on board allows you to change directions.
+Description: Cell motus puzzle game
+ Cell Motus puzzle is a dark themed variation on
+ Andrey Shevchuk Game about Squares in which you have to find
+ the right way to connect cells with circles of the same color.
+ Cells move only in one of the six directions in which the
+ arrow is pointing. Arrows on board allows you to change directions.
  .
- As with the original, Cell Motus jumps right in with a series of few very easy levels to get you started, just a few cells and a few possible arrangements. Once you've completed these, you're given a real brain challenge. Some levels are little more than simple "directions gaming", requiring that you brought a special strategy in order to success. It's easy to learn but difficult to master.
+ As with the original, Cell Motus jumps right in with a series of
+ few very easy levels to get you started, just a few cells and a
+ few possible arrangements. Once you've completed these, you're
+ given a real brain challenge. Some levels are little more than
+ simple "directions gaming", requiring that you brought a special
+ strategy in order to success. It's easy to learn but difficult to master.
