build file typos fix

--- a/src/linux/CMakeLists.txt
+++ b/src/linux/CMakeLists.txt
@@ -61,12 +61,12 @@ find_package(PNG REQUIRED)
 if ( CMAKE_SIZEOF_VOID_P EQUAL 8 )
   set (GLFW_LIB ${EXT_ROOT}/glfw3/libs/linux/64-bit/libglfw3.a)
 else()
-  set (LUAJIT_LIB ${EXT_ROOT}/luajit/libs/linux/32-bit/libluajit.a)
+  set (GLFW_LIB ${EXT_ROOT}/glfw3/libs/linux/32-bit/libglfw3.a)
 endif()
 
 if(LUA_STATIC)
 	if ( CMAKE_SIZEOF_VOID_P EQUAL 8 )
-	  set (LUAJIT_LIB ${EXT_ROOT}/luajit/libs/linux/32-bit/libluajit.a)
+	  set (LUAJIT_LIB ${EXT_ROOT}/luajit/libs/linux/64-bit/libluajit.a)
 	else()
 	  set (LUAJIT_LIB ${EXT_ROOT}/luajit/libs/linux/32-bit/libluajit.a)
 	endif()
