--- a/install/linux/control
+++ b/install/linux/control
@@ -1,6 +1,7 @@
 Source: cellmotus
 Section: games
 Priority: optional
+Version: 0.9.3-1
 Maintainer: TimeFlask <timeflask@gmail.com>
 Build-Depends: debhelper (>= 8.0.0), cmake
 Standards-Version: 3.9.4
